--- a/src/components/ContentWrapper/ContentWrapper.module.scss
+++ b/src/components/ContentWrapper/ContentWrapper.module.scss
@@ -1,6 +1,8 @@
+@import "../../styles/variables/variables.scss";
+
 .wrapper {
   width: 900px;
   padding: 67px 110px 80px 110px;
-  background: #ffffff;
+  background: $white;
   border-radius: 24px;
 }
