--- a/src/features/CreateForm/CreateForm.module.scss
+++ b/src/features/CreateForm/CreateForm.module.scss
@@ -22,81 +22,6 @@
 }
 
 .confirm {
-  color: red;
+  color: $red;
   font-size: 14px;
-}
-.select {
-  width: 300px;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 20px;
-
-  [class*="-control"] {
-    height: 44px;
-    outline: none;
-    background: #ffffff;
-    border: 1px solid rgba(0, 0, 0, 0.16);
-    border-radius: 4px;
-
-    &:hover {
-      border: 1px solid rgba(0, 0, 0, 0.16);
-      background: #ffffff;
-    }
-
-    &:focus-within {
-      border: 1px solid rgba(0, 0, 0, 0.16);
-      outline: none;
-      box-shadow: none;
-    }
-  }
-  [class*="-ValueContainer"] {
-    padding: 0 12px 0;
-  }
-  [class*="-option"] {
-    min-height: 40px;
-    padding: 10px 15px;
-    background-color: white;
-    position: relative;
-    z-index: 100;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    color: #333333;
-    cursor: pointer;
-
-    &:hover {
-      background-color: #f8f8f8;
-    }
-  }
-  [class*="menu"] {
-    margin: 0;
-    padding: 0;
-    background: #ffffff;
-    box-shadow: 0 4px 12px 2px rgba(0, 0, 0, 0.02);
-    border-radius: 4px;
-  }
-  [class*="-IndicatorsContainer"] {
-    display: block;
-  }
-
-  [class*="-indicators"] {
-    display: block;
-  }
-
-  [class*="-singleValue"] {
-    margin: 0;
-    padding: 0;
-  }
-  [class*="-placeholder"] {
-    margin: 0;
-    padding: 0;
-    color: gray;
-  }
-  [class*="-Input"] {
-    margin: 0;
-    padding: 0;
-  }
-}
-input[type="search"]::-webkit-search-cancel-button {
-  -webkit-appearance: none;
 }
