--- a/src/features/UserProfileForm/UserProfileForm.module.scss
+++ b/src/features/UserProfileForm/UserProfileForm.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables/variables.scss";
+
 .form {
   margin-top: 25px;
   display: flex;
@@ -15,23 +17,25 @@
   }
 }
 
-.input {
+.inputMask {
   height: 44px;
   padding: 12px;
-  border: 1px solid rgba(0, 0, 0, 0.16);
   border-radius: 4px;
+  border: $border;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: rgba(0, 0, 0, 0.48);
-  background: rgba(0, 0, 0, 0.04);
+  color: $color;
+  background: $background;
 }
-
+.inputEmail {
+  background: $background;
+}
 .button {
   width: 80px;
   height: 45px;
   margin-top: 48px;
 }
 .confirm {
-  color: red;
+  color: $red;
 }
