--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,11 +1,5 @@
-@import url(//db.onlinewebfonts.com/c/37086b994764dba84b2ee0f1083bfeed?family=SB+Sans+Interface);
-
-@font-face {
-  font-family: "SB Sans Interface";
-  src: url("//db.onlinewebfonts.com/t/37086b994764dba84b2ee0f1083bfeed.woff2")
-    format("woff2");
-  font-style: normal;
-}
+@import "../styles/vendor/fonts/fonts.scss";
+@import "../styles/variables/variables.scss";
 
 body {
   min-height: 100vh;
@@ -14,11 +8,11 @@ body {
   justify-content: center;
   align-items: center;
   margin: 0;
-  font-family: SB Sans Interface;
+  font-family: SBSansInterfaceRegular, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-width: 320px;
-  background: #f4f4f5;
+  background: $pale-blue;
 }
 
 * {
@@ -41,7 +35,7 @@ body {
   width: 900px;
   min-height: 704px;
   padding: 25px;
-  background: #ffffff;
+  background: $white;
   border-radius: 24px;
 }
 
@@ -51,7 +45,7 @@ button {
   outline: none;
   cursor: pointer;
   background: none;
-  font-family: "SB Sans Interface";
+  font-family: SBSansInterfaceRegular;
 }
 
 ul {
@@ -65,22 +59,21 @@ a {
 
 input {
   outline: none;
-  font-family: "SB Sans Interface";
+  font-family: SBSansInterfaceRegular;
 }
 input:focus {
-  background-color: rgba(0, 0, 0, 0.04);
+  background-color: $background;
 }
 textarea {
   outline: none;
   border: none;
-  background: rgba(0, 0, 0, 0.04);
+  background: $background;
 }
 
 textarea:focus {
-  background: rgba(0, 0, 0, 0.04);
+  background: $background;
 }
 input:-webkit-autofill {
   -webkit-text-fill-color: rgba(0, 0, 0, 0.48);
-  -webkit-box-shadow: 0 0 0px 1000px none inset;
   transition: background-color 5000s ease-in-out 0s;
 }
