--- a/src/components/Autocomplete/Autocomplete.module.scss
+++ b/src/components/Autocomplete/Autocomplete.module.scss
@@ -26,7 +26,7 @@
     }
   }
   [class*="-ValueContainer"] {
-    padding: 0 12px 0;
+    padding: 0 15px 0;
   }
   [class*="-option"] {
     min-height: 40px;
@@ -62,6 +62,7 @@
   [class*="-singleValue"] {
     margin: 0;
     padding: 0;
+    margin-left: 10px;
   }
   [class*="-placeholder"] {
     margin: 0;
