--- a/src/components/Autocomplete/Autocomplete.module.scss
+++ b/src/components/Autocomplete/Autocomplete.module.scss
@@ -56,13 +56,13 @@
   }
 
   [class*="-indicators"] {
-    display: block;
+    display: none;
   }
 
   [class*="-singleValue"] {
     margin: 0;
     padding: 0;
-    margin-left: 6px;
+    margin-left: 2px;
   }
   [class*="-placeholder"] {
     margin: 0;
