feature modal window create

--- a/src/styles/variables/variables.scss
+++ b/src/styles/variables/variables.scss
@@ -18,5 +18,7 @@ $transition: all 0.3s ease-in-out;
 
 //input-styles
 $border: 1px solid rgba(0, 0, 0, 0.16);
+$modal: rgba(0, 0, 0, 0.16);
 $color: rgba(0, 0, 0, 0.48);
 $background: rgba(0, 0, 0, 0.04);
+$shadow: 0px 8px 32px rgba(0, 0, 0, 0.08);
