--- a/src/components/Autocomplete/Autocomplete.module.scss
+++ b/src/components/Autocomplete/Autocomplete.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables/variables.scss";
 
 .select {
-  width: 300px;
+  max-width: 300px;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
