--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -4,17 +4,17 @@
   padding-bottom: 25px;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   border-bottom: 1px solid rgba(0, 0, 0, 0.08);
 }
-.margin {
-  margin-left: 25px;
-}
+
 .avatar {
+  width: 80px;
+  height: 80px;
+  margin-right: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80px;
-  height: 80px;
   background: $lavender;
   border-radius: 100px;
   font-weight: 400;
@@ -35,6 +35,7 @@
 
 .list {
   display: flex;
+  flex-wrap: wrap;
 
   .listItem {
     margin-right: 16px;
