--- a/src/features/AdvfForm.tsx/AdvForm.module.scss
+++ b/src/features/AdvfForm.tsx/AdvForm.module.scss
@@ -42,9 +42,12 @@
 }
 
 .buttons {
-  margin-top: 65px;
+  margin-top: 30px;
   display: flex;
   justify-content: space-between;
+  @media (min-width: 768px) {
+    margin-top: 65px;
+  }
 }
 .removeBtn {
   width: 16px;
