--- a/src/features/CreateForm/CreateForm.module.scss
+++ b/src/features/CreateForm/CreateForm.module.scss
@@ -4,7 +4,15 @@
   max-width: 300px;
   display: flex;
   flex-direction: column;
-  margin-bottom: 50px;
+  margin-bottom: 15px;
+
+  @media (min-width: 400px) {
+    margin-bottom: 30px;
+  }
+
+  @media (min-width: 768px) {
+    margin-bottom: 50px;
+  }
 }
 
 .buttons {
