--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,42 +1,19 @@
 @import "../styles/vendor/fonts/fonts.scss";
 @import "../styles/variables/variables.scss";
 
-body {
-  min-height: 100vh;
-  display: flex;
-  font-family: serif;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  font-family: SBSansInterfaceRegular, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  min-width: 320px;
-  background: $pale-blue;
-}
-
 * {
   box-sizing: border-box;
 }
 
-.flex {
+body {
+  max-width: 930px;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.container {
-  min-width: 1440px;
   margin: 0 auto;
   padding: 0 15px;
-}
-
-.main {
-  width: 900px;
-  min-height: 704px;
-  padding: 25px;
-  background: $white;
-  border-radius: 24px;
+  font-family: SBSansInterfaceRegular, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: $pale-blue;
 }
 
 button {
