refactor: Moved benefit data, selectedCheckboxes and selectedRadio to separate components

--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -41,15 +41,15 @@
     margin-right: 16px;
     display: flex;
     align-items: flex-end;
+    font-size: 12px;
   }
   .link {
     color: $slate-blue;
-    margin-bottom: 3px;
     margin-left: 6px;
   }
 }
 
 .folder {
-  width: 21px;
-  height: 21px;
+  width: 18px;
+  height: 18px;
 }
