--- a/src/components/Input/InputLabel/InputLabel.module.scss
+++ b/src/components/Input/InputLabel/InputLabel.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables/variables.scss";
+@import "../../../styles/variables/variables.scss";
 
 .label {
   margin-bottom: 10px;
